[UPDATE] add dynamic query for collection asset
